fixed overflow issue

--- a/static/styles.css
+++ b/static/styles.css
@@ -9,10 +9,12 @@ body {
   color: #009900;
   position: relative;
   width: 100vw;
+  height: 100%;
+  overflow-y: auto;
 }
 
 .main-body {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 img {
@@ -82,7 +84,7 @@ h2 {
   margin: 10px;
 }
 
-#command-block {
+#command-block  {
   width: 35vw;
 }
 
@@ -101,10 +103,6 @@ h2 {
 .prompt-response {
   color: #cccccc;
   padding: 10px 0;
-}
-
-.prompt-response p {
-  width: 100%;
 }
 
 .description-block {
@@ -142,9 +140,9 @@ a:hover,
   padding-bottom: 10px;
 }
 
-/* .project-div{
-  padding: 10px 0;
-} */
+.more-div{
+  width: fit-content;
+}
 
 @media only screen and (max-width: 400px) {
   img {
@@ -180,6 +178,10 @@ a:hover,
   #banner {
     flex-direction: column;
     align-items: center;
+  }
+
+  .project-div, .more-div{
+    width: 100vw;
   }
 }
 
